name:                yagpv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/yagpv
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2020 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.4

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     YAGPV
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , containers
                     , filepath
                     , ghc-prof
                     , scientific
                     , text

executable yagpv
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , yagpv
                     , optparse-applicative

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , yagpv
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/yagpv
